--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
@@ -28,7 +28,7 @@ config.status: configure
 	QUILT_PATCHES=debian/patches quilt push -a || test $$? = 2
 	touch aclocal.m4
 	touch configure
-	touch config.h.in
+	# touch config.h.in
 	touch `find -name Makefile.in`
 	LDFLAGS="$(LDFLAGS) -Wl,-z,defs" CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
 
